--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 logging.level.org.springframework=debug
 
-spring.security.user.name=Mike
-spring.security.user.password=p
+#spring.security.user.name=Mike
+#spring.security.user.password=p
 
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
